[gd_scene load_steps=33 format=2]

[ext_resource path="res://Scenes/The world border platformer/versionSelector.gd" type="Script" id=1]
[ext_resource path="res://Scenes/The world border platformer/uninstalltwbp.gd" type="Script" id=2]
[ext_resource path="res://Scenes/The world border platformer/plainstalltwbp.gd" type="Script" id=3]
[ext_resource path="res://Font/roboto_bold_20.tres" type="DynamicFont" id=4]
[ext_resource path="res://Font/roboto_bold.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/The world border platformer/iniscene.gd" type="Script" id=6]
[ext_resource path="res://Scenes/The world border platformer/gobacktomain.gd" type="Script" id=7]
[ext_resource path="res://Icons/delete_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" type="Texture" id=8]
[ext_resource path="res://Icons/arrow_back_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" type="Texture" id=9]
[ext_resource path="res://Icons/list_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.png" type="Texture" id=10]
[ext_resource path="res://Icons/Covers/Minesweeper cover.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.109804, 0.105882, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.886275, 0.878431, 0.984314, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Font/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=14]
font_data = SubResource( 13 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.32549, 0.321569, 0.4, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.32549, 0.321569, 0.4, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.807843, 0.807843, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.109804, 0.105882, 0.113725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.807843, 0.807843, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.270588, 0.270588, 0.352941, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.807843, 0.807843, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.270588, 0.270588, 0.352941, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.807843, 0.807843, 0.913725, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.807843, 0.807843, 0.913725, 1 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="Animation" id=20]
resource_name = "animation_close_scene"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.6, 0.6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1000, 125 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "animation_to_scene"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1000, 125 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.000976563
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 991.0
margin_bottom = 568.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 959.0
margin_bottom = 88.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 86.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
custom_colors/icon_color_pressed = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_disabled = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_focus = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_hover_pressed = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_normal = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_colors/icon_color_hover = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/focus = SubResource( 24 )
custom_styles/normal = SubResource( 25 )
icon = ExtResource( 9 )
expand_icon = true
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 90.0
margin_right = 959.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 16 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Minesweeper"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 959.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 32
custom_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_top = 32.0
margin_right = 959.0
margin_bottom = 412.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 477.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 11 )
expand = true
stretch_mode = 7

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 481.0
margin_right = 959.0
margin_bottom = 380.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 478.0
margin_bottom = 270.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0.886275, 0.878431, 0.984314, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Try to find all bombs in the classic minesweeper
game."

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 274.0
margin_right = 478.0
margin_bottom = 322.0
rect_min_size = Vector2( 48, 48 )
custom_colors/font_color_disabled = Color( 0.733333, 0.741176, 0.85098, 1 )
custom_colors/font_color_focus = Color( 0.733333, 0.741176, 0.85098, 1 )
custom_colors/font_color = Color( 0.733333, 0.741176, 0.85098, 1 )
custom_colors/font_color_hover = Color( 0.733333, 0.741176, 0.85098, 1 )
custom_colors/font_color_pressed = Color( 0.733333, 0.741176, 0.85098, 1 )
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Getting version list..."
align = 1
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 326.0
margin_right = 478.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Options_button" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_right = 94.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Options_button"]
modulate = Color( 0.807843, 0.807843, 0.913725, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Options_button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 6 )
text = "
"
flat = true

[node name="Play_Install_button" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 355.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Play_Install_button"]
modulate = Color( 0.807843, 0.807843, 0.913725, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 6

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Play_Install_button"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_styles/focus = SubResource( 5 )
flat = true
script = ExtResource( 3 )

[node name="Uninstall_button" type="Panel" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 359.0
margin_right = 478.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Uninstall_button"]
modulate = Color( 0.807843, 0.807843, 0.913725, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Uninstall_button"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 7 )
flat = true
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/animation_close_scene = SubResource( 20 )
anims/animation_to_scene = SubResource( 21 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Button" to="MarginContainer/VBoxContainer/HBoxContainer2/Button" method="_on_Button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/OptionButton" to="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Play_Install_button/Button" method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/OptionButton" to="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Uninstall_button/Button2" method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Play_Install_button/Button" to="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Play_Install_button/Button" method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Uninstall_button/Button2" to="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Uninstall_button/Button2" method="_on_Button2_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="MarginContainer/VBoxContainer/HBoxContainer2/Button" method="_on_AnimationPlayer_animation_finished"]
